--- a/views/admin/_navlist.phtml
+++ b/views/admin/_navlist.phtml
@@ -4,5 +4,6 @@
     <li><a href="index.php?route=account">Mon compte</a></li>
     <li><a href="index.php?route=dashboard">Panneau de control</a></li>
     <li><a href="index.php?route=contact">Contactez moi</a></li>
+    <li><a href="index.php?route=register">Créer un compte</a></li>
     <li><a href="index.php?route=disconnect">Se déconnecter</a></li>
 </ul>
