--- a/views/admin/dashboard.phtml
+++ b/views/admin/dashboard.phtml
@@ -93,7 +93,6 @@
     <!-- ------SECTION MESSAGES----- -->
     <!-- --------------------------- -->
     <section id="messages-section" class="hidden">
-    
         <h2>Panneau de control des messages</h2>
         <table>
             <thead>
@@ -118,7 +117,7 @@
                         <td><a href="#" id="message<?=$i;?>"><?=$i;?></a></td>
                         <td><?=$user->getUsername();?></td>
                         <td><?=$message->getSubject();?></td>
-                        <td><?=$message->getSendDate();?></td>
+                        <td><?=$message->getSendDateTime();?></td>
                     </tr>
                 <?php
                     $i++;
