--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KodingCore Developpement</title>
+    <title>KodingCore Development</title>
     <link rel="icon" type="image/png" href="https://i.goopics.net/wovpgb.png">
     <link rel="stylesheet" href="assets/styles/css/style.css">
 </head>
